[gd_scene load_steps=17 format=4 uid="uid://cpa5vpkfj7mq6"]

[ext_resource type="PackedScene" uid="uid://dumm43iwldfhs" path="res://objects/modules/factory/base_rooms/factory_silo_int.tscn" id="1_2e01g"]
[ext_resource type="PackedScene" uid="uid://b6eexfh4v078o" path="res://objects/interactables/elevators/sellbot_elevator.tscn" id="2_5v41x"]
[ext_resource type="PackedScene" uid="uid://direah3lbjuu5" path="res://objects/battle/battle_node/battle_node.tscn" id="3_fsyd7"]
[ext_resource type="PackedScene" uid="uid://dflwjcy6fj0av" path="res://objects/cog/cog.tscn" id="3_xc4dq"]
[ext_resource type="Resource" uid="uid://baep1t1jv5ebj" path="res://objects/cog/presets/misc/clown.tres" id="4_haias"]
[ext_resource type="Resource" uid="uid://d0jhddwl6gem1" path="res://objects/cog/presets/misc/clown2.tres" id="5_ttkbr"]
[ext_resource type="AudioStream" uid="uid://daugcd1llho7m" path="res://audio/music/clown_boss.ogg" id="7_88yaj"]
[ext_resource type="Script" uid="uid://buvo6xgnf27w8" path="res://objects/battle/battle_resources/misc_movies/clown_boss/clown_intro.gd" id="7_dfrhk"]
[ext_resource type="PackedScene" uid="uid://dgqurwn1l3pdg" path="res://models/props/facility_objects/memo/memo.fbx" id="8_hd2mx"]
[ext_resource type="Texture2D" uid="uid://c3siydcrqhpte" path="res://models/props/facility_objects/memo/memo_clown.png" id="9_4xpdn"]

[sub_resource type="GDScript" id="GDScript_foksf"]
resource_name = "scene_setter"
script/source = "extends Node3D


func boss_completed() -> void:
	if not SaveFileService.progress_file.cog_creator_unlocked:
		SaveFileService.make_progress('cog_creator_unlocked', true)
	Globals.s_clown_boss_defeated.emit()
"

[sub_resource type="Resource" id="Resource_5gjvd"]
script = ExtResource("7_dfrhk")
skippable = true
override_music = ExtResource("7_88yaj")

[sub_resource type="BoxShape3D" id="BoxShape3D_2xp4f"]
size = Vector3(13.3801, 11.3378, 9.91716)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yu158"]
resource_name = "tt_t_ara_csa_memoShader"
transparency = 4
vertex_color_use_as_albedo = true
albedo_color = Color(0.905882, 0.905882, 0.905882, 1)
albedo_texture = ExtResource("9_4xpdn")
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_5a6st"]
_surfaces = [{
"aabb": AABB(-0.220483, -0.275835, -0.0478185, 0.436624, 0.542023, 0.0878772),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAwABAAAABAADAAAABQADAAQABgAFAAQABwAFAAYAAQAAAAIAAQADAAAAAwAEAAAAAwAFAAQABQAGAAQABQAHAAYA"),
"lods": [0.109948, PackedByteArray("AwABAAAABAADAAAABQADAAQABgAFAAQAAQADAAAAAwAEAAAAAwAFAAQABQAGAAQA")],
"name": "tt_t_ara_csa_memoShader",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("LsZhvpzjwr1h3UO9JVRdPjo6jb5h3UO9LsZhvjo6jb5h3UO9JVRdPpzjwr1h3UO9LsZhvtghrz2JFCQ9JVRdPtghrz2JFCQ9LsZhvslJiD6JFCQ9JVRdPslJiD6JFCQ9")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3j05h"]
resource_name = "GeometryTransformHelper"
_surfaces = [{
"aabb": AABB(-0.220483, -0.275835, -0.0478185, 0.436624, 0.542023, 0.0878772),
"attribute_data": PackedByteArray("/////3tm6T0wTSk//////xVXZT+p7Xw//////3tm6T2p7Xw//////xVXZT8wTSk//////3tm6T1YWas+/////xVXZT9YWas+/////3tm6T1ADgM8/////xVXZT9ADgM8/////x+IzT2p7Xw//////wD8vD0wTSk//////wD8vD2p7Xw//////x+IzT0wTSk//////wD8vD1YWas+/////x+IzT1YWas+/////wD8vD1ADgM8/////x+IzT1ADgM8"),
"format": 34359742495,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAwABAAAABAADAAAABQADAAQABgAFAAQABwAFAAYACAAJAAoACAALAAkACwAMAAkACwANAAwADQAOAAwADQAPAA4A"),
"lods": [0.109948, PackedByteArray("AwABAAAABAADAAAABQADAAQABgAFAAQACAALAAkACwAMAAkACwANAAwADQAOAAwA")],
"material": SubResource("StandardMaterial3D_yu158"),
"name": "tt_t_ara_csa_memoShader",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("LsZhvpzjwr1h3UO9JVRdPjo6jb5h3UO9LsZhvjo6jb5h3UO9JVRdPpzjwr1h3UO9LsZhvtghrz2JFCQ9JVRdPtghrz2JFCQ9LsZhvslJiD6JFCQ9JVRdPslJiD6JFCQ9JVRdPjo6jb5h3UO9LsZhvpzjwr1h3UO9LsZhvjo6jb5h3UO9JVRdPpzjwr1h3UO9LsZhvtghrz2JFCQ9JVRdPtghrz2JFCQ9LsZhvslJiD6JFCQ9JVRdPslJiD6JFCQ9/3/1Zv///7//f/9/////v/9//3////+//3/1Zv///7//f/Vm////v/9/9Wb///+//3//f////7//f/9/////v/////////8/9eb//////z//////////P/Xm//////8/9eb//////z/15v//////P/////////8//////////z8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_5a6st")

[node name="SiloInterior" instance=ExtResource("1_2e01g")]
script = SubResource("GDScript_foksf")

[node name="BossFight" type="Node3D" parent="." index="3"]

[node name="Elevator" parent="BossFight" index="0" instance=ExtResource("2_5v41x")]
transform = Transform3D(2.145, 0, 0, 0, 2.145, 0, 0, 0, 2.145, -0.119489, 62.8317, -235.256)
floor_count = 5
floor_current = 5
sync_to_floor = true
scene_path = "res://scenes/elevator_scene/elevator_scene.tscn"
opened = false

[node name="BattleNode" parent="BossFight" index="1" node_paths=PackedStringArray("cogs") instance=ExtResource("3_fsyd7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.309, 62.8718, -228.878)
cogs = [NodePath("Cog1"), NodePath("Clown1"), NodePath("Clown2"), NodePath("Cog2")]
override_intro = SubResource("Resource_5gjvd")
boss_battle = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="BossFight/BattleNode" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0135498, 5.16888, 3.04265)
shape = SubResource("BoxShape3D_2xp4f")

[node name="Clown1" parent="BossFight/BattleNode" index="4" instance=ExtResource("3_xc4dq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0616028, -0.00780106, -1.66833)
visible = false
level_range_offset = 3
dna = ExtResource("4_haias")
skelecog_chance = 0
fusion_chance = -1

[node name="Clown2" parent="BossFight/BattleNode" index="5" instance=ExtResource("3_xc4dq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.08828, -0.00799942, 0)
visible = false
level_range_offset = 2
dna = ExtResource("5_ttkbr")
skelecog_chance = 0
fusion_chance = -1

[node name="Cog1" parent="BossFight/BattleNode" index="6" instance=ExtResource("3_xc4dq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.821168, -0.00780106, -8.80406)
visible = false
skelecog_chance = 0
fusion = true

[node name="Cog2" parent="BossFight/BattleNode" index="7" instance=ExtResource("3_xc4dq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.67756, -0.00780106, -8.80406)
visible = false
skelecog_chance = 0
fusion = true

[node name="CameraAngles" type="Node3D" parent="BossFight" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.309, 62.864, -228.554)

[node name="IntroPos" type="Camera3D" parent="BossFight/CameraAngles" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.930418, 0.366501, 0, -0.366501, 0.930418, 0.095, 4.365, 5.425)
fov = 52.0

[node name="CloseupPos" type="Node3D" parent="BossFight/CameraAngles" index="1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0523431, 0, -6.16463)

[node name="ElevatorLightPos" type="Node3D" parent="BossFight/CameraAngles" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.19, 4.165, -5.35)

[node name="BooPos" type="Camera3D" parent="BossFight/CameraAngles" index="3"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.315, 1.003, -5.465)
fov = 48.8

[node name="LaughPos" type="Camera3D" parent="BossFight/CameraAngles" index="4"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.5, -4)
fov = 48.8

[node name="CharPositions" type="Node3D" parent="BossFight" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.309, 62.864, -228.554)

[node name="WalkInPos" type="Node3D" parent="BossFight/CharPositions" index="0"]
transform = Transform3D(0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, 0, 0, 3.41681)

[node name="NotePos" type="Node3D" parent="BossFight/CharPositions" index="1"]
transform = Transform3D(-0.906308, 0, -0.422618, 0, 1, 0, 0.422618, 0, -0.906308, 0.0523431, 0, -4.94327)

[node name="DialPos" type="Node3D" parent="BossFight/CharPositions" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.273, -3.663)

[node name="Memo" parent="BossFight" index="4" instance=ExtResource("8_hd2mx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.190031, 64.2487, -235.616)

[node name="GeometryTransformHelper" parent="BossFight/Memo/memo" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.267019, 0.00482178, 0.00387573)
mesh = SubResource("ArrayMesh_3j05h")

[node name="ENTRANCE" type="Node3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.07, 62.857, -221.263)

[node name="Node3D" parent="ENTRANCE" index="0" instance_placeholder="res://scenes/tool_scenes/entrance_placer/entrance_placer.tscn"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[connection signal="s_battle_end" from="BossFight/BattleNode" to="." method="boss_completed"]

[editable path="BossFight/Memo"]
